# rad_pr2_stack

./: .gitignore  .gitmodules  README.md  catkin_make_clean.sh  catkin_make_pr2_picknplace.sh
plane_segmentation/: CMakeLists.txt  package.xml
plane_segmentation/cfg/: PlaneSegmentationParams.cfg
plane_segmentation/launch/: plane_segmentation.launch
plane_segmentation/scripts/: gen_mesh_ply.sh  gen_mesh_stl.sh  mesh_gen.mlx
plane_segmentation/src/: plane_segmentation.cpp
pr2_cooking_demo/: CMakeLists.txt  package.xml
pr2_cooking_demo/cfg/: cooking_config.yaml
pr2_cooking_demo/include/pr2_cooking_demo/: cooking.hpp
pr2_cooking_demo/launch/: pr2_cooking_demo.launch
pr2_cooking_demo/src/: cooking.cpp  pr2_cooking_demo.cpp
pr2_demo/src/pr2_py/: CMakeLists.txt  package.xml
pr2_demo/src/pr2_py/launch/: moveit_rviz.launch  pr2_demo.launch  pr2_demo.rviz
pr2_demo/src/pr2_py/src/: pr2_demo.py
pr2_eye_track_demo/: CMakeLists.txt  README.md  package.xml
pr2_eye_track_demo/include/pr2_eye_track_demo/: box_delivery.hpp  pr2_box_delivery.hpp
pr2_eye_track_demo/launch/: nav_setup.launch  pr2_eye_track_demo.launch
pr2_eye_track_demo/src/: box_delivery.cpp  pr2_box_delivery.cpp  pr2_eye_track_demo.cpp
pr2_eye_track_demo/srv/: BoxQuery.srv
pr2_eye_track_demo_msgs/: CMakeLists.txt  package.xml
pr2_grasp_manager/: CMakeLists.txt  package.xml
pr2_grasp_manager/include/pr2_grasp_manager/: grasp_manager.hpp
pr2_grasp_manager/src/: grasp_manager.cpp  pr2_grasp_manager.cpp  pr2_softness_sorter.cpp
pr2_head/: CMakeLists.txt  package.xml
pr2_head/cfg/: config.yaml
pr2_head/include/pr2_head/: head.hpp
pr2_head/launch/: pr2_head.launch
pr2_head/src/: head.cpp  pr2_head.cpp
pr2_head_msgs/: CMakeLists.txt  package.xml
pr2_head_msgs/msg/: LookAt.msg
pr2_natural_language/: CMakeLists.txt  package.xml
pr2_natural_language/cfg/: config.yaml
pr2_natural_language/include/pr2_natural_language/: head.hpp
pr2_natural_language/launch/: main.launch
pr2_natural_language/src/: __init__.py  head.cpp  parse_recipes.py  parser_wrapper.py  pr2_natural_language.cpp
pr2_natural_language/srv/: Query.srv
pr2_picknplace/: CMakeLists.txt  package.xml
pr2_picknplace/cfg/: picknplace_config.yaml
pr2_picknplace/include/pr2_picknplace/: pick_place.hpp
pr2_picknplace/launch/: pick_place.launch  table_localise.launch
pr2_picknplace/src/: pick_place.cpp  pick_place_actest.cpp  pr2_localise_table.cpp  pr2_picknplace.cpp
pr2_picknplace_msgs/: CMakeLists.txt  package.xml
pr2_picknplace_msgs/action/: PickPlace.action
pr2_picknplace_msgs/msg/: PicknPlaceGoal.msg  SegmentedObject.msg
pr2_picknplace_msgs/srv/: GetSlope.srv
pr2_tower/: CMakeLists.txt  package.xml
pr2_tower/cfg/: pr2_tower_config.yaml
pr2_tower/include/pr2_tower/: tower_sm.hpp
pr2_tower/launch/: tower_sm.launch
pr2_tower/src/: pr2_tower.cpp  tower_sm.cpp
pr2_tower_msgs/: CMakeLists.txt  package.xml
pr2_tower_msgs/action/: TowerSM.action
