<?xml version="1.0"?>
<package>
  <name>plane_segmentation</name>
  <version>0.0.1</version>
  <description>The plane_segmentation package</description>

  <maintainer email="d.angelov@sms.ed.ac.uk">Daniel Angelov</maintainer>

  <license>MTI RAD Lab</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>pr2_picknplace_msgs</build_depend>

  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>std_svrs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_eigen</run_depend>
  <run_depend>tf2_sensor_msgs</run_depend>
  <run_depend>pr2_picknplace_msgs</run_depend>

</package>
