<?xml version="1.0"?>
<package>
  <name>pr2_eye_track_demo</name>
  <version>0.0.0</version>
  <description>The pr2_eye_track_demo package</description>

  <maintainer email="d.angelov@ed.ac.uk">daniel</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pr2_picknplace_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_eigen</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pr2_picknplace_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf2_eigen</run_depend>

</package>
