<?xml version="1.0"?>
<package>
  <name>pr2_head</name>
  <version>0.0.0</version>
  <description>The pr2_head package</description>

  <maintainer email="alex.bordallo@gmail.com">AlejandroBordallo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sound_play</build_depend>
  <run_depend>sound_play</run_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <run_depend>pr2_controllers_msgs</run_depend>

  <export>

  </export>
</package>
