<?xml version="1.0"?>
<package>
  <name>pr2_picknplace</name>
  <version>0.0.0</version>
  <description>The pr2_picknplace package</description>

  <maintainer email="alex.bordallo@gmail.com">AlejandroBordallo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>pr2_picknplace_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>pr2_picknplace_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>
</package>
