<?xml version="1.0"?>
<package>
  <name>pr2_tower</name>
  <version>0.0.0</version>
  <description>The pr2_tower package</description>

  <maintainer email="alex.bordallo@gmail.com">AlejandroBordallo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>pr2_picknplace_msgs</build_depend>
  <run_depend>pr2_picknplace_msgs</run_depend>
  <build_depend>pr2_tower_msgs</build_depend>
  <run_depend>pr2_tower_msgs</run_depend>

  <export>

  </export>
</package>
